--- a/index.html
+++ b/index.html
@@ -24,19 +24,7 @@
       font-size: 24px;
       margin-bottom: 20px;
     }
-    
-    /* Botão de play/pause */
-    #playPauseButton {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      background-color: #444;
-      color: #fff;
-    }
-    
+
     /* Estilização da jukebox */
     .jukebox {
       width: 300px;
@@ -68,9 +56,8 @@
       transition: background-color 0.1s ease, transform 0.1s ease;
     }
 
-    /* Área inferior da jukebox (simula botões ou saída de som) */
-    .jukebox::after {
-      content: "";
+    /* Control panel: retângulo cinza central para o botão */
+    .control-panel {
       position: absolute;
       bottom: 10%;
       left: 50%;
@@ -80,27 +67,69 @@
       background: silver;
       border: 2px solid #fff;
       border-radius: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* Botão de play/pause (agora dentro da control panel) */
+    #playPauseButton {
+      padding: 5px 10px;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      background-color: #444;
+      color: #fff;
+    }
+
+    /* Container de categorias musicais */
+    .categories {
+      margin-top: 20px;
+      display: flex;
+      gap: 10px;
+    }
+    .category-button {
+      padding: 8px 16px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #444;
+      color: #fff;
+    }
+    .category-button.active {
+      background-color: #888;
     }
   </style>
 </head>
 <body>
-  <!-- Contador com label BATIDAS CRIADAS -->
+  <!-- Contador -->
   <div id="counter">BATIDAS CRIADAS: 0</div>
 
-  <!-- Jukebox com display superior (que será animado) -->
+  <!-- Jukebox -->
   <div class="jukebox">
     <div class="display"></div>
+    <!-- Botão de play/pause dentro do retângulo cinza -->
+    <div class="control-panel">
+      <button id="playPauseButton">play</button>
+    </div>
   </div>
 
-  <!-- Botão de play/pause -->
-  <button id="playPauseButton">play</button>
+  <!-- Botões de seleção de categorias musicais -->
+  <div class="categories">
+    <button data-category="classico" class="category-button active">Clássico</button>
+    <button data-category="eletronica" class="category-button">Eletrônica</button>
+    <button data-category="rock" class="category-button">Rock</button>
+    <button data-category="ambient" class="category-button">Ambient</button>
+  </div>
 
   <script>
     // Configuração da API Web Audio
     const AudioContext = window.AudioContext || window.webkitAudioContext;
     const audioCtx = new AudioContext();
 
-    // Se o AudioContext estiver suspenso (autoplay block), retomamos com clique do usuário
+    // Se o AudioContext estiver suspenso (por bloqueio de autoplay), retomamos com clique do usuário
     document.body.addEventListener('click', () => {
       if (audioCtx.state === 'suspended') {
         audioCtx.resume();
@@ -114,35 +143,59 @@
     let nextSongTimeout = null;
     let beatTimeouts = [];
 
-    // Array de frequências (escala de C maior) para escolher as notas
-    const scale = [261.63, 293.66, 329.63, 349.23, 392.00, 440.00, 493.88];
+    // Definição das categorias musicais com seus parâmetros
+    const categories = {
+      classico: {
+        scale: [261.63, 293.66, 329.63, 349.23, 392.00, 440.00, 493.88],
+        noteDuration: 0.1,
+        noteInterval: 0.15,
+      },
+      eletronica: {
+        scale: [523.25, 587.33, 659.25, 698.46, 783.99],
+        noteDuration: 0.05,
+        noteInterval: 0.1,
+      },
+      rock: {
+        scale: [110, 130.81, 146.83, 164.81, 196, 220, 246.94],
+        noteDuration: 0.1,
+        noteInterval: 0.15,
+      },
+      ambient: {
+        scale: [130.81, 146.83, 164.81, 174.61, 196, 220, 246.94],
+        noteDuration: 0.3,
+        noteInterval: 0.4,
+      }
+    };
+
+    // Categoria musical selecionada (padrão: clássico)
+    let currentCategory = 'classico';
 
     // Função auxiliar para gerar inteiros aleatórios entre min e max (inclusive)
     function getRandomInt(min, max) {
       return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 
-    // Função para animar o display da jukebox (alterando cor e fazendo um breve efeito de escala)
+    // Função para animar o display da jukebox (alterando cor e realizando um breve efeito de escala)
     function animateDisplay() {
       const display = document.querySelector('.display');
       const randomHue = Math.floor(Math.random() * 360);
       display.style.backgroundColor = `hsl(${randomHue}, 100%, 50%)`;
       display.style.transform = 'scale(1.2)';
-      // Retorna ao estado original após 100ms
       setTimeout(() => {
         display.style.transform = 'scale(1)';
         display.style.backgroundColor = '#000';
       }, 100);
     }
 
-    // Função que gera e toca uma “música” generativa de ritmo acelerado
+    // Função que gera e toca uma “música” generativa de ritmo variado conforme a categoria selecionada
     function playSong() {
-      if (!isPlaying) return; // Se pausado, não faz nada
+      if (!isPlaying) return;
 
-      // Define a quantidade de notas da "música" (entre 8 e 16 para variar)
+      const category = categories[currentCategory];
+      const scale = category.scale;
+      const noteDuration = category.noteDuration;
+      const noteInterval = category.noteInterval;
       const numNotes = getRandomInt(8, 16);
-      const noteDuration = 0.1;    // duração de cada nota (em segundos)
-      const noteInterval = 0.15;   // intervalo entre o início das notas
       const startTime = audioCtx.currentTime;
 
       for (let i = 0; i < numNotes; i++) {
@@ -159,11 +212,10 @@
         const osc = audioCtx.createOscillator();
         const gainNode = audioCtx.createGain();
 
-        // Seleciona aleatoriamente uma frequência da escala
+        // Seleciona aleatoriamente uma frequência da escala definida
         let freq = scale[getRandomInt(0, scale.length - 1)];
-        // Em cerca de 50% das vezes, dobra a frequência (subindo uma oitava)
         if (Math.random() > 0.5) {
-          freq *= 2;
+          freq *= 2; // Em 50% das vezes, dobra a frequência (subindo uma oitava)
         }
         osc.frequency.setValueAtTime(freq, startTime + i * noteInterval);
 
@@ -172,7 +224,6 @@
         gainNode.gain.linearRampToValueAtTime(0.5, startTime + i * noteInterval + 0.01);
         gainNode.gain.linearRampToValueAtTime(0, startTime + i * noteInterval + noteDuration);
 
-        // Conecta o oscilador e agenda seu início e término
         osc.connect(gainNode);
         gainNode.connect(audioCtx.destination);
         osc.start(startTime + i * noteInterval);
@@ -182,7 +233,6 @@
       // Agenda a próxima "música" para tocar quando esta terminar
       const totalDuration = numNotes * noteInterval + noteDuration;
       nextSongTimeout = setTimeout(() => {
-        // Limpa os timeouts de batidas já agendados
         beatTimeouts = [];
         playSong();
       }, totalDuration * 1000);
@@ -193,9 +243,6 @@
       if (!isPlaying) {
         isPlaying = true;
         playPauseButton.textContent = 'pause';
-        // (Opcional) Reinicia o contador se desejar zerar ao iniciar
-        // beatCount = 0;
-        // counterEl.textContent = 'BATIDAS CRIADAS: ' + beatCount;
         playSong();
       }
     }
@@ -204,12 +251,10 @@
     function pausePlayback() {
       isPlaying = false;
       playPauseButton.textContent = 'play';
-      // Cancela o próximo agendamento de música
       if (nextSongTimeout) {
         clearTimeout(nextSongTimeout);
         nextSongTimeout = null;
       }
-      // Cancela todos os timeouts de batidas pendentes
       beatTimeouts.forEach(timeout => clearTimeout(timeout));
       beatTimeouts = [];
     }
@@ -217,15 +262,26 @@
     // Evento de clique no botão de play/pause
     playPauseButton.addEventListener('click', () => {
       if (!isPlaying) {
-        // Se estiver pausado, inicia a reprodução (resumindo o AudioContext se necessário)
         if (audioCtx.state === 'suspended') {
           audioCtx.resume();
         }
         startPlayback();
       } else {
-        // Se estiver tocando, pausa
         pausePlayback();
       }
+    });
+
+    // Eventos para os botões de categoria musical
+    const categoryButtons = document.querySelectorAll('.category-button');
+    categoryButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        // Remove a classe ativa de todos os botões
+        categoryButtons.forEach(btn => btn.classList.remove('active'));
+        // Adiciona a classe ativa ao botão clicado
+        button.classList.add('active');
+        // Atualiza a categoria musical atual
+        currentCategory = button.getAttribute('data-category');
+      });
     });
   </script>
 </body>
